fix: spell error; PatchConfig comment for swag; tools sendMessage sync bug
